Tentando configurar a fonte https://github.com/nuxt/ui/blob/db041979b266c0b30c09ad6d7bd2250cd451ef4e/docs/content/docs/1.getting-started/5.theme/1.design-system.md#fonts

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,2 +1,9 @@
 @import "tailwindcss";
 @import "@nuxt/ui";
+
+@theme {
+  /* https://tailwindcss.com/docs/font-family#customizing-your-theme */
+  --font-mono: 'Fira Mono', ui-monospace, monospace;
+  --font-sans: 'Fira Sans', system-ui, sans-serif;
+  --font-serif: 'Roboto Slab', ui-serif, serif;
+}
