Testando aumentar a fonte

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,11 +1,15 @@
 @import "tailwindcss";
 @import "@nuxt/ui";
 
+@source "../../../content/**/*";
+
 @theme {
   /* https://tailwindcss.com/docs/font-family#customizing-your-theme */
   --font-mono: 'Fira Mono', ui-monospace, monospace;
   --font-sans: 'Fira Sans', system-ui, sans-serif;
   --font-serif: 'Roboto Slab', ui-serif, serif;
+
+  /* --text-base: 20px; */
 }
 
 body {
