--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -2,6 +2,7 @@
 @import "@nuxt/ui";
 
 @source "../../../content/**/*";
+@source "../../components/**/*";
 
 @theme {
   --color-agente: var(--color-sky-100);
